feat(backend): improve trade and portfolio services